--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,45 +4,296 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/CSS/servicios.css" />
+    <link rel="stylesheet" href="../CSS/style.css" />
     <title>Servicios</title>
   </head>
+
   <body>
-    <header class="hero">
+    <header class="heading">
       <nav class="nav">
         <section class="nav__contenedor contenedor">
           <figure class="nav__logo">
+            <img src="../img/bx-game.svg" class="nav__pintura" />
             <h2 class="nav__titulo">PlayerGamer</h2>
           </figure>
 
-          <div class="nav__links">
-            <a href="#" class="nav__link">Inicio</a>
-            <a href="#" class="nav__link">Producto</a>
-            <a href="#" class="nav__link">Contacto</a>
+          <label for="menu" class="nav__label">
+            <img src="../img/bx-menu.svg" class="nav__img" />
+          </label>
+          <input type="checkbox" id="menu" class="nav__input" />
+
+          <div class="nav__menu">
+            <a href="../index.html" class="nav__link nav__link--media"
+              >Inicio</a
+            >
+            <a href="./producto.html" class="nav__link nav__link--media"
+              >Producto</a
+            >
+            <a href="/pages/servicios.html" class="nav__link nav__link--media"
+              >servicios</a
+            >
             <a href="#" class="nav__link nav__link--boton">Iniciar Sesión</a>
             <a href="#" class="nav__link nav__link--boton">Registro</a>
           </div>
         </section>
       </nav>
 
-      <section class="hero__main contenedor">
-        <div>
-          <h1 class="hero__titulo">
-            Lorem ipsum dolor sit amet consectetur adipisicing
-          </h1>
-          <p class="hero__paragrafo">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis non
-            dicta cumque explicabo dolor aspernatur voluptatum doloribus nostrum
-            consequatur unde?
-          </p>
-          <a href="#" class="hero__cta">Lorem ipsum.</a>
+      <section class="heading__main contenedor">
+        <div class="heading__wave" style="height: 150px; overflow: hidden">
+          <svg
+            viewBox="0 0 500 150"
+            preserveAspectRatio="none"
+            style="height: 100%; width: 100%"
+          >
+            <path
+              d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+              style="stroke: none; fill: #fff"
+            ></path>
+          </svg>
         </div>
-        <figure class="hero__img">
-          <img src="/img/img14.jpg" class="hero__picture" alt="Imagen Hero" />
-        </figure>
+        <div class="heading__texts">
+          <h1 class="heading__titulo">"¡El online no tiene pausa mama!"</h1>
+          <p class="heading__paragrafo">
+            Emocionarse con un juego más que con una película.
+          </p>
+          <form action="/action_page.php" class="heading__form">
+            <input
+              class="heading__search"
+              type="search"
+              id="BuscarJuego"
+              name="BuscarJuego"
+              placeholder="Buscar..."
+            />
+            <input type="submit" class="heading__boton" />
+          </form>
+        </div>
       </section>
     </header>
 
-    <main></main>
+    <main>
+      <section class="services">
+        <div class="services__grid contenedor">
+          <div class="servione services__control">
+            <div class="services__texts">
+              <figure class="services__figure">
+                <img src="../img/service5.jpg" class="services__img" />
+              </figure>
+              <h3 class="services__title">Mantenimiento de tu Mando</h3>
+            </div>
+            <div class="services__contenido">
+              <div class="services__encabezado">
+                <h3 class="services__subtitle">subtitulo game</h3>
+                <p class="services__paragrafo">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel,
+                  eligendi!
+                </p>
+              </div>
+              <div class="services__pie">
+                <h3 class="services__price">USD $ 100</h3>
+                <p class="services__minparagrafo">precio</p>
+                <a href="#" class="btn-buy">comprar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="servitwo services__control">
+            <div class="services__texts">
+              <figure class="services__figure">
+                <img src="../img/service2.jpg" class="services__img" />
+              </figure>
+              <h3 class="services__title">Mantenimiento de tu Consola</h3>
+            </div>
+            <div class="services__contenido">
+              <div class="services__encabezado">
+                <h3 class="services__subtitle">subtitulo game</h3>
+                <p class="services__paragrafo">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel,
+                  eligendi!
+                </p>
+              </div>
+              <div class="services__pie">
+                <h3 class="services__price">USD $ 110</h3>
+                <p class="services__minparagrafo">precio</p>
+                <a href="#" class="btn-buy">comprar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="servithree services__control">
+            <div class="services__texts">
+              <figure class="services__figure">
+                <img src="../img/service3.jpg" class="services__img" />
+              </figure>
+              <h3 class="services__title">Modifica tu Control</h3>
+            </div>
+            <div class="services__contenido">
+              <div class="services__encabezado">
+                <h3 class="services__subtitle">subtitulo game</h3>
+                <p class="services__paragrafo">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel,
+                  eligendi!
+                </p>
+              </div>
+              <div class="services__pie">
+                <h3 class="services__price">USD $ 120</h3>
+                <p class="services__minparagrafo">precio</p>
+                <a href="#" class="btn-buy">comprar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="servifour services__control">
+            <div class="services__texts">
+              <figure class="services__figure">
+                <img src="../img/service6.jpg" class="services__img" />
+              </figure>
+              <h3 class="services__title">Iluminación para tu consola</h3>
+            </div>
+            <div class="services__contenido">
+              <div class="services__encabezado">
+                <h3 class="services__subtitle">subtitulo game</h3>
+                <p class="services__paragrafo">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel,
+                  eligendi!
+                </p>
+              </div>
+              <div class="services__pie">
+                <h3 class="services__price">USD $ 50</h3>
+                <p class="services__minparagrafo">precio</p>
+                <a href="#" class="btn-buy">comprar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="servinoti services__control">
+            <div class="servinoti__noticia">
+              <div class="servinoti__top"><h2>Noticias Gamer</h2></div>
+              <ul class="servinoti__ul">
+                <li class="servinoti__li">
+                  <article class="servinoti__lista">
+                    <figure>
+                      <img src="https://p4.wallpaperbetter.com/wallpaper/727/49/179/battlefield-1-gamer-wallpaper-preview.jpg" class="servinoti__img">
+                      <span class="servinoti__span">05.12.2022</span>
+                    </figure>
+                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet  </h3>
+                    <a href="#" class="servinoti__btn">Cultura</a>
+                  </article>
+                </li>
+
+                <li class="servinoti__li">
+                  <article class="servinoti__lista">
+                    <figure>
+                      <img src="https://p4.wallpaperbetter.com/wallpaper/1000/316/848/spider-man-2018-game-wallpaper-preview.jpg" class="servinoti__img">
+                      <span class="servinoti__span">05.12.2022</span>
+                    </figure>
+                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet  </h3>
+                    <a href="#" class="servinoti__btn">Cultura</a>
+                  </article>
+                </li>
+
+                <li class="servinoti__li">
+                  <article class="servinoti__lista">
+                    <figure>
+                      <img src="https://p4.wallpaperbetter.com/wallpaper/680/379/658/gamer-strategy-games-video-games-nba-wallpaper-preview.jpg" class="servinoti__img">
+                      <span class="servinoti__span">05.12.2022</span>
+                    </figure>
+                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet  </h3>
+                    <a href="#" class="servinoti__btn">Cultura</a>
+                  </article>
+                </li>
+
+                <li class="servinoti__li">
+                  <article class="servinoti__lista">
+                    <figure>
+                      <img src="https://p4.wallpaperbetter.com/wallpaper/740/918/401/digital-art-artwork-red-dead-redemption-red-dead-redemption-2-arthur-morgan-hd-wallpaper-preview.jpg" class="servinoti__img">
+                      <span class="servinoti__span">05.12.2022</span>
+                    </figure>
+                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet  </h3>
+                    <a href="#" class="servinoti__btn">Cultura</a>
+                  </article>
+                </li>
+
+                <li class="servinoti__li">
+                  <article class="servinoti__lista">
+                    <figure>
+                      <img src="https://p4.wallpaperbetter.com/wallpaper/410/847/681/assassin-s-creed-assassin-s-creed-unity-wallpaper-preview.jpg" class="servinoti__img">
+                      <span class="servinoti__span">05.12.2022</span>
+                    </figure>
+                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet  </h3>
+                    <a href="#" class="servinoti__btn">Cultura</a>
+                  </article>
+                </li>
+
+                <li class="servinoti__li">
+                  <article class="servinoti__lista">
+                    <figure>
+                      <img src="https://p4.wallpaperbetter.com/wallpaper/347/316/37/halo-halo-3-odst-video-games-wallpaper-preview.jpg" class="servinoti__img">
+                      <span class="servinoti__span">05.12.2022</span>
+                    </figure>
+                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet  </h3>
+                    <a href="#" class="servinoti__btn">Cultura</a>
+                  </article>
+                </li>
+
+                <li class="servinoti__li">
+                  <article class="servinoti__lista">
+                    <figure>
+                      <img src="https://p4.wallpaperbetter.com/wallpaper/330/782/367/crysis-3-wallpaper-preview.jpg" class="servinoti__img">
+                      <span class="servinoti__span">05.12.2022</span>
+                    </figure>
+                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet  </h3>
+                    <a href="#" class="servinoti__btn">Cultura</a>
+                  </article>
+                </li>
+
+                <li class="servinoti__li">
+                  <article class="servinoti__lista">
+                    <figure>
+                      <img src="https://p4.wallpaperbetter.com/wallpaper/624/717/140/electronic-arts-ghost-games-nfs-heat-need-for-speed-heat-hd-wallpaper-preview.jpg" class="servinoti__img">
+                      <span class="servinoti__span">05.12.2022</span>
+                    </figure>
+                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet  </h3>
+                    <a href="#" class="servinoti__btn">Cultura</a>
+                  </article>
+                </li>
+
+              </ul>
+            </div>
+          </div>
+
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__container contenedor">
+        <div class="footer__texts">
+          <h2 class="title">Contactanos</h2>
+          <div class="footer__icons">
+            <a href="#" class="footer__icon fab fa-facebook-f"></a>
+            <a href="#" class="footer__icon fab fa-twitter"></a>
+            <a href="#" class="footer__icon fab fa-instagram"></a>
+          </div>
+          <nav class="footer__nav">
+            <a href="#" class="footer__link">Inicio</a>
+            <a href="#" class="footer__link">Sobre nosotros</a>
+            <a href="#" class="footer__link">Trabjos</a>
+          </nav>
+
+          <p class="footer__copy">
+            Derechos reservados &copy; Cristian Rodriguez
+          </p>
+        </div>
+
+        <figure class="footer__img">
+          <img src="../img/socialUno.svg" class="footer__picture" />
+        </figure>
+      </div>
+    </footer>
+
+    <script
+      src="https://kit.fontawesome.com/0f3d7928c1.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
