--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="pages/producto.html" class="nav__link nav__link--media"
               >Producto</a
             >
-            <a href="/pages/servicios.html" class="nav__link nav__link--media"
+            <a href="pages/servicios.html" class="nav__link nav__link--media"
               >servicios</a
             >
             <a href="#" class="nav__link nav__link--boton">Iniciar Sesión</a>
