--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -26,10 +26,10 @@
             <a href="../index.html" class="nav__link nav__link--media"
               >Inicio</a
             >
-            <a href="./producto.html" class="nav__link nav__link--media"
+            <a href="producto.html" class="nav__link nav__link--media"
               >Producto</a
             >
-            <a href="/pages/servicios.html" class="nav__link nav__link--media"
+            <a href="servicios.html" class="nav__link nav__link--media"
               >servicios</a
             >
             <a href="#" class="nav__link nav__link--boton">Iniciar Sesión</a>
