--- a/pages/producto.html
+++ b/pages/producto.html
@@ -15,7 +15,7 @@
         <section class="nav__contenedor contenedor">
           <figure class="nav__logo">
             <img src="../img/bx-game.svg" class="nav__pintura" />
-            <h2 class="nav__titulo">PlayerGamer</h2>
+            <h2 class="nav__titulo nav__titulo--producto">PlayerGamer</h2>
           </figure>
 
           <label for="menu" class="nav__label">
@@ -24,17 +24,17 @@
           <input type="checkbox" id="menu" class="nav__input" />
 
           <div class="nav__menu">
-            <a href="../index.html" class="nav__link nav__link--media"
+            <a href="../index.html" class="nav__link nav__link--media nav__link--color"
               >Inicio</a
             >
-            <a href="producto.html" class="nav__link nav__link--media"
+            <a href="producto.html" class="nav__link nav__link--media nav__link--color"
               >Producto</a
             >
-            <a href="servicios.html" class="nav__link nav__link--media"
+            <a href="servicios.html" class="nav__link nav__link--media nav__link--color"
               >servicios</a
             >
-            <a href="#" class="nav__link nav__link--boton">Iniciar Sesión</a>
-            <a href="#" class="nav__link nav__link--boton">Registro</a>
+            <a href="#" class="nav__link nav__link--boton nav__style--btn">Iniciar Sesión</a>
+            <a href="#" class="nav__link nav__link--boton nav__style--btn">Registro</a>
           </div>
         </section>
       </nav>
