efecto logo menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
       <nav class="nav">
         <div class="nav__contenedor contenedor">
           <figure class="nav__logo">
-            <img src="img/bx-game.svg" class="nav__pintura" />
+            <box-icon
+              name="game"
+              animation="tada"
+              size="lg"
+              color="black"
+              class="nav__pintura"
+            ></box-icon>
             <h2 class="nav__titulo">PlayerGamer</h2>
           </figure>
 
@@ -392,6 +398,7 @@
       </div>
     </footer>
 
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script
       src="https://kit.fontawesome.com/0f3d7928c1.js"
       crossorigin="anonymous"
