--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -13,7 +13,13 @@
       <nav class="nav">
         <section class="nav__contenedor contenedor">
           <figure class="nav__logo">
-            <img src="../img/bx-game.svg" class="nav__pintura" />
+            <box-icon
+              name="game"
+              animation="tada"
+              size="lg"
+              color="white"
+              class="nav__pintura"
+            ></box-icon>
             <h2 class="nav__titulo nav__titulo--producto">PlayerGamer</h2>
           </figure>
 
@@ -23,17 +29,27 @@
           <input type="checkbox" id="menu" class="nav__input" />
 
           <div class="nav__menu">
-            <a href="../index.html" class="nav__link nav__link--media nav__link--color"
+            <a
+              href="../index.html"
+              class="nav__link nav__link--media nav__link--color"
               >Inicio</a
             >
-            <a href="producto.html" class="nav__link nav__link--media nav__link--color"
+            <a
+              href="producto.html"
+              class="nav__link nav__link--media nav__link--color"
               >Producto</a
             >
-            <a href="servicios.html" class="nav__link nav__link--media nav__link--color"
+            <a
+              href="servicios.html"
+              class="nav__link nav__link--media nav__link--color"
               >servicios</a
             >
-            <a href="#" class="nav__link nav__link--boton nav__style--btn">Iniciar Sesión</a>
-            <a href="#" class="nav__link nav__link--boton nav__style--btn">Registro</a>
+            <a href="#" class="nav__link nav__link--boton nav__style--btn"
+              >Iniciar Sesión</a
+            >
+            <a href="#" class="nav__link nav__link--boton nav__style--btn"
+              >Registro</a
+            >
           </div>
         </section>
       </nav>
@@ -359,6 +375,7 @@
       </div>
     </footer>
 
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script
       src="https://kit.fontawesome.com/0f3d7928c1.js"
       crossorigin="anonymous"
