Se modifica page servivios y sombras

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -44,10 +44,10 @@
               class="nav__link nav__link--media nav__link--color"
               >servicios</a
             >
-            <a href="#" class="nav__link nav__link--boton nav__style--btn"
+            <a href="#" class="nav__link nav__link--boton servi__style--btn"
               >Iniciar Sesión</a
             >
-            <a href="#" class="nav__link nav__link--boton nav__style--btn"
+            <a href="#" class="nav__link nav__link--boton servi__style--btn"
               >Registro</a
             >
           </div>
@@ -288,20 +288,6 @@
                     <a href="#" class="servinoti__btn">Cultura</a>
                   </article>
                 </li>
-
-                <li class="servinoti__li">
-                  <article class="servinoti__lista">
-                    <figure>
-                      <img
-                        src="https://p4.wallpaperbetter.com/wallpaper/624/717/140/electronic-arts-ghost-games-nfs-heat-need-for-speed-heat-hd-wallpaper-preview.jpg"
-                        class="servinoti__img"
-                      />
-                      <span class="servinoti__span">05.12.2022</span>
-                    </figure>
-                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet</h3>
-                    <a href="#" class="servinoti__btn">Cultura</a>
-                  </article>
-                </li>
               </ul>
             </div>
           </div>
@@ -326,7 +312,9 @@
               <img src="../img/nosotros2.jpg" class="nuestros__imagen" />
             </picture>
             <div class="nuestros__texts seccion2-grid2">
-              <h3 class="nuestros__mintitle">Lorem ipsum dolor.</h3>
+              <h3 class="nuestros__mintitle">
+                Tenemos un descuento especial para los primeros 50 clientes
+              </h3>
               <p class="nuestros__paragrafo">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem
                 quo, dolorum perferendis aut unde repudiandae!
@@ -339,7 +327,10 @@
               <img src="../img/nosotros3.jpg" class="nuestros__imagen" />
             </picture>
             <div class="nuestros__texts seccion3-grid2">
-              <h3 class="nuestros__mintitle">Lorem ipsum dolor.</h3>
+              <h3 class="nuestros__mintitle">
+                Si no queda satisfecho con nuestro producto/servicio le
+                devolvemos su dinero.
+              </h3>
               <p class="nuestros__paragrafo">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem
                 quo, dolorum perferendis aut unde repudiandae!
