Diseño Reponsivo (Inicio - Producto - Servicios)

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -98,8 +98,8 @@
             </div>
             <div class="services__contenido">
               <div class="services__encabezado">
-                <h3 class="services__subtitle">Como Nuevo:</h3>
-                <p class="services__paragrafo">
+                <h3 class="services__subtitle">Nuevo:</h3>
+                <p class="services__paragrafo services--manejo">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel,
                   eligendi Lorem ipsum dolor sit amet consectetur adipisicing
                   elit.
@@ -146,7 +146,7 @@
             </div>
             <div class="services__contenido">
               <div class="services__encabezado">
-                <h3 class="services__subtitle">El Mejor Diseño:</h3>
+                <h3 class="services__subtitle">Diseño:</h3>
                 <p class="services__paragrafo">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel,
                   eligendi Lorem ipsum dolor sit amet consectetur adipisicing
@@ -170,7 +170,7 @@
             </div>
             <div class="services__contenido">
               <div class="services__encabezado">
-                <h3 class="services__subtitle">Iluminación Led:</h3>
+                <h3 class="services__subtitle">Led:</h3>
                 <p class="services__paragrafo">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel,
                   eligendi Lorem ipsum dolor sit amet consectetur adipisicing
@@ -178,7 +178,7 @@
                 </p>
               </div>
               <div class="services__pie">
-                <h3 class="services__price">USD $ 50</h3>
+                <h3 class="services__price">USD $ 150</h3>
                 <p class="services__minparagrafo">precio</p>
                 <a href="#" class="btn-buy">comprar</a>
               </div>
@@ -188,7 +188,7 @@
           <div class="servinoti">
             <div class="servinoti__noticia">
               <div class="servinoti__top">
-                <h2>Noticias Gamer</h2>
+                <h2 class="servinoti__titulo">Noticias Gamer</h2>
               </div>
               <ul class="servinoti__ul">
                 <li class="servinoti__li">
