--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <a href="pages/servicios.html" class="nav__link nav__link--media"
               >servicios</a
             >
-            <a href="#" class="nav__link nav__link--boton">Iniciar Sesión</a>
+            <a href="pages/loguin.html" class="nav__link nav__link--boton"
+              >Iniciar Sesión</a
+            >
             <a href="#" class="nav__link nav__link--boton">Registro</a>
           </div>
         </div>
