--- a/pages/producto.html
+++ b/pages/producto.html
@@ -45,7 +45,9 @@
               class="nav__link nav__link--media nav__link--color"
               >servicios</a
             >
-            <a href="#" class="nav__link nav__link--boton nav__style--btn"
+            <a
+              href="loguin.html"
+              class="nav__link nav__link--boton nav__style--btn"
               >Iniciar Sesión</a
             >
             <a href="#" class="nav__link nav__link--boton nav__style--btn"
